--- a/Sockets/WebServer/build.gradle
+++ b/Sockets/WebServer/build.gradle
@@ -4,6 +4,15 @@ apply plugin: 'application'
 //define main class
 mainClassName = 'SimpleServer'
 
+repositories {
+  mavenCentral()
+}
+
+dependencies {
+  compile 'org.json:json:20211205' //org.json
+  compile 'com.google.code.gson:gson:2.8.6' //google json
+}
+
 task SimpleWebServer(type: JavaExec) {
   group 'http'
   description 'Simple Http Demo'
